Move schemadictionary items out of the learnavro package, into schemadict

--- a/ivy.xml
+++ b/ivy.xml
@@ -21,7 +21,7 @@
        xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
     <info
         organisation="com.cloudera"
-        module="learnavro"
+        module="schemadict"
         status="integration">
 	</info>
     <dependencies>
