Remove unnec. libs from ivy.xml, and fix module name

--- a/ivy.xml
+++ b/ivy.xml
@@ -21,13 +21,11 @@
        xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
     <info
         organisation="com.cloudera"
-        module="schemadict"
+        module="learnavro"
         status="integration">
 	</info>
     <dependencies>
-      <dependency org="junit" name="junit" rev="${junit.version}" />
       <dependency org="log4j" name="log4j" rev="${log4j.version}" />
-      <dependency org="commons-cli" name="commons-cli" rev="${commons-cli.version}"/>
       <dependency org="org.apache.hadoop" name="avro" rev="${avro.version}" />
       <dependency org="org.apache.hadoop" name="hadoop-core" rev="0.20.2" />
 
