--- a/ivy.xml
+++ b/ivy.xml
@@ -26,7 +26,7 @@
 	</info>
     <dependencies>
       <dependency org="log4j" name="log4j" rev="${log4j.version}" />
-      <dependency org="org.apache.hadoop" name="avro" rev="${avro.version}" />
+      <dependency org="org.apache.avro" name="avro" rev="${avro.version}" />
       <dependency org="org.apache.hadoop" name="hadoop-core" rev="0.20.2" />
 
       <exclude org="ant-eclipse" module="ant-eclipse" />
